name:          procedural-core
version:       0.0.1
category:      Games
license:       MIT
author:        Jann Mueller
maintainer:    Jann Mueler (j.mueller.11@alumni.ucl.ac.uk)
stability:     provisional
homepage:      https://github.com/j-mueller/procedural  
bug-reports:   https://github.com/j-mueller/procedural/issues
copyright:     Copyright (C) 2018 Jann Mueller
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Core library for procedural
description:   A little library for procedural generation in Haskell

source-repository head
  type: git
  location: git@github.com:j-mueller/procedural.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Tiles
  build-depends:
    base,
    comonad,
    containers,
    grid,
    mwc-random
